--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <div class="Tools">
                 <h1>Tech Skills</h1>
                 <div class="app">
-                    <div><img src="/tools/vscode.png" alt="VSCODE">VSCODE</div>
-                    <div><img src="/tools/npm.png" alt="npm"> npm</div>
+                    <div><img src="vscode.png" alt="VSCODE">VSCODE</div>
+                    <div><img src="npm.png" alt="npm"> npm</div>
                     <div><img src="/tools/DevTools.png" alt="DevTools"> DevTools</div>
                     <div><img src="/tools/mongodb.png" alt="mongodb"> mongodb</div>
                     <div><img src="/tools/git.png" alt="GIT">GIT </div>
