--- a/index.html
+++ b/index.html
@@ -118,26 +118,26 @@
             </div>
         </section>
 
-        <section id="skill">
-            <div class="Tools">
+        <div class="Tools">
+                <section id="skill">
                 <h1>Tech Skills</h1>
                 <div class="app">
                     <div><img src="vscode.png" alt="VSCODE">VSCODE</div>
                     <div><img src="npm.png" alt="npm"> npm</div>
-                    <div><img src="/tools/DevTools.png" alt="DevTools"> DevTools</div>
-                    <div><img src="/tools/mongodb.png" alt="mongodb"> mongodb</div>
-                    <div><img src="/tools/git.png" alt="GIT">GIT </div>
-                    <div><img src="/tools/reactjs.png" alt="reactjs">reactjs </div>
-                    <div><img src="/tools/redux.png" alt="redux">redux </div>
-                    <div><img src="/tools/spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
-                    <div><img src="/tools/angular.jpg" alt="VSCODE">angular </div>
-                    <div><img src="/tools/postman.webp" alt="npm"> postman</div>
-                    <div><img src="/tools/mysql.webp" alt="DevTools">mysql </div>
-                    <div><img src="/tools/python.webp" alt="mongodb">python </div>
-                    <div><img src="/tools/git.png" alt="GIT">GIT </div>
-                    <div><img src="/tools/reactjs.png" alt="reactjs"> reactjs</div>
-                    <div><img src="/tools/redux.png" alt="reduxIT"> redux</div>
-                    <div><img src="/tools/spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
+                    <div><img src="mongodb.png" alt="mongodb"> mongodb</div>
+                    <div><img src="DevTools.png" alt="DevTools"> DevTools</div>
+                    <div><img src="git.png" alt="GIT">GIT </div>
+                    <div><img src="reactjs.png" alt="reactjs">reactjs </div>
+                    <div><img src="redux.png" alt="redux">redux </div>
+                    <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
+                    <div><img src="angular.jpg" alt="VSCODE">angular </div>
+                    <div><img src="postman.webp" alt="npm"> postman</div>
+                    <div><img src="mysql.webp" alt="DevTools">mysql </div>
+                    <div><img src="python.webp" alt="mongodb">python </div>
+                    <div><img src="git.png" alt="GIT">GIT </div>
+                    <div><img src="reactjs.png" alt="reactjs"> reactjs</div>
+                    <div><img src="redux.png" alt="reduxIT"> redux</div>
+                    <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
                 </div>
 
             </div>
@@ -146,16 +146,16 @@
                 <h1>Soft Skills</h1>
 
                 <div class="skill-list">
-                    <div><img src="/tools/TM.png" alt="Time Management">
+                    <div><img src="TM.png" alt="Time Management">
                         <p>Time Management</p>
                     </div>
-                    <div><img src="/tools/PS.png" alt="Problem Sloving">
+                    <div><img src="PS.png" alt="Problem Sloving">
                         <p>Problem Sloving</p>
                     </div>
-                    <div><img src="/tools/ETL.png" alt="Excellent Team Lead">
+                    <div><img src="ETL.png" alt="Excellent Team Lead">
                         <p>Excellent Team Lead</p>
                     </div>
-                    <div><img src="/tools/AD.png" alt="Application Development">
+                    <div><img src="AD.png" alt="Application Development">
                         <p>Application Development</p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                 <h1>Project</h1>
 
                 <div class="mini-project">
-                    <div class="pro"><img src="/tools/temperature.png" alt="Project name">
+                    <div class="pro"><img src="temperature.png" alt="Project name">
                         <h2>Temperature converter</h2>
                         <P>A temperature converter is a tool or application designed to convert
                             temperature values between different units, such as Celsius (°C), Fahrenheit (°F). It
@@ -177,7 +177,7 @@
                         <button class="project-button">View Project</button>
                     </div>
 
-                    <div class="pro"><img src="/tools/counter.png" alt="Project name">
+                    <div class="pro"><img src="counter.png" alt="Project name">
                         <h2>Counter</h2>
                         <p>A counter project is a simple application or tool designed to increment,
                             decrement a numerical value. It typically includes buttons or controls for users to adjust
@@ -186,7 +186,7 @@
                         <button class="project-button">View Project</button>
                     </div>
 
-                    <div class="pro"><img src="/tools/project-3.png" alt="Project name">
+                    <div class="pro"><img src="project-3.png" alt="Project name">
                         <h2>Quotes generator</h2>
                         <p>A quotes generator is a simple application or tool that displays random or curated quotes,
                             often
@@ -196,7 +196,7 @@
                         <button class="project-button">View Project</button>
                     </div>
 
-                    <div class="pro"><img src="/tools/project-4.png" alt="Project name">
+                    <div class="pro"><img src="project-4.png" alt="Project name">
                         <h2>Project Name</h2>
                         <p> Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
                             adipisicing
@@ -205,7 +205,7 @@
                         <button class="project-button">View Project</button>
                     </div>
 
-                    <div class="pro"><img src="/tools/project-5.png" alt="Project name">
+                    <div class="pro"><img src="project-5.png" alt="Project name">
                         <h2>Project Name</h2>
                         <p>Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
                             adipisicing
@@ -232,7 +232,7 @@
             <div class="Box-4">
                 <div class="company1">
                     <div class="company">
-                        <img src="/tools/google.png" alt="google">
+                        <img src="google.png" alt="google">
                         <p> <button>Know More</button></p>
                     </div>
 
@@ -248,7 +248,7 @@
 
                 <div class="company1">
                     <div class="company">
-                        <img src="/tools/google.png" alt="google">
+                        <img src="google.png" alt="google">
                         <p> <button>Know More</button></p>
                     </div>
 
