--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,
 100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;
 1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
@@ -118,213 +118,214 @@
             </div>
         </section>
 
-        <div class="Tools">
-                <section id="skill">
-                <h1>Tech Skills</h1>
-                <div class="app">
-                    <div><img src="vscode.png" alt="VSCODE">VSCODE</div>
-                    <div><img src="npm.png" alt="npm"> npm</div>
-                    <div><img src="mongodb.png" alt="mongodb"> mongodb</div>
-                    <div><img src="DevTools.png" alt="DevTools"> DevTools</div>
-                    <div><img src="git.png" alt="GIT">GIT </div>
-                    <div><img src="reactjs.png" alt="reactjs">reactjs </div>
-                    <div><img src="redux.png" alt="redux">redux </div>
-                    <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
-                    <div><img src="angular.jpg" alt="VSCODE">angular </div>
-                    <div><img src="postman.webp" alt="npm"> postman</div>
-                    <div><img src="mysql.webp" alt="DevTools">mysql </div>
-                    <div><img src="python.webp" alt="mongodb">python </div>
-                    <div><img src="git.png" alt="GIT">GIT </div>
-                    <div><img src="reactjs.png" alt="reactjs"> reactjs</div>
-                    <div><img src="redux.png" alt="reduxIT"> redux</div>
-                    <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
-                </div>
 
+        <section id="skill">
+            <div class="Tools"></div>
+            <h1>Tech Skills</h1>
+            <div class="app">
+                <div><img src="vscode.png" alt="VSCODE">VSCODE</div>
+                <div><img src="npm.png" alt="npm"> npm</div>
+                <div><img src="mongodb.png" alt="mongodb"> mongodb</div>
+                <div><img src="DevTools.png" alt="DevTools"> DevTools</div>
+                <div><img src="git.png" alt="GIT">GIT </div>
+                <div><img src="reactjs.png" alt="reactjs">reactjs </div>
+                <div><img src="redux.png" alt="redux">redux </div>
+                <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
+                <div><img src="angular.jpg" alt="VSCODE">angular </div>
+                <div><img src="postman.webp" alt="npm"> postman</div>
+                <div><img src="mysql.webp" alt="DevTools">mysql </div>
+                <div><img src="python.webp" alt="mongodb">python </div>
+                <div><img src="git.png" alt="GIT">GIT </div>
+                <div><img src="reactjs.png" alt="reactjs"> reactjs</div>
+                <div><img src="redux.png" alt="reduxIT"> redux</div>
+                <div><img src="spring-boot-tutorial.jpg" alt="bootspring">bootspring </div>
             </div>
 
-            <div class="Box-3">
-                <h1>Soft Skills</h1>
+    </div>
 
-                <div class="skill-list">
-                    <div><img src="TM.png" alt="Time Management">
-                        <p>Time Management</p>
-                    </div>
-                    <div><img src="PS.png" alt="Problem Sloving">
-                        <p>Problem Sloving</p>
-                    </div>
-                    <div><img src="ETL.png" alt="Excellent Team Lead">
-                        <p>Excellent Team Lead</p>
-                    </div>
-                    <div><img src="AD.png" alt="Application Development">
-                        <p>Application Development</p>
-                    </div>
+    <div class="Box-3">
+        <h1>Soft Skills</h1>
+
+        <div class="skill-list">
+            <div><img src="TM.png" alt="Time Management">
+                <p>Time Management</p>
+            </div>
+            <div><img src="PS.png" alt="Problem Sloving">
+                <p>Problem Sloving</p>
+            </div>
+            <div><img src="ETL.png" alt="Excellent Team Lead">
+                <p>Excellent Team Lead</p>
+            </div>
+            <div><img src="AD.png" alt="Application Development">
+                <p>Application Development</p>
+            </div>
+        </div>
+    </div>
+
+    </section>
+
+    <section id="project">
+        <div class="Project">
+            <h1>Project</h1>
+
+            <div class="mini-project">
+                <div class="pro"><img src="temperature.png" alt="Project name">
+                    <h2>Temperature converter</h2>
+                    <P>A temperature converter is a tool or application designed to convert
+                        temperature values between different units, such as Celsius (°C), Fahrenheit (°F). It
+                        simplifies
+                        calculations by allowing users to input .</p>
+                    <button class="project-button">View Project</button>
+                </div>
+
+                <div class="pro"><img src="counter.png" alt="Project name">
+                    <h2>Counter</h2>
+                    <p>A counter project is a simple application or tool designed to increment,
+                        decrement a numerical value. It typically includes buttons or controls for users to adjust
+                        the
+                        count and displays the updated value in real-time.</p>
+                    <button class="project-button">View Project</button>
+                </div>
+
+                <div class="pro"><img src="project-3.png" alt="Project name">
+                    <h2>Quotes generator</h2>
+                    <p>A quotes generator is a simple application or tool that displays random or curated quotes,
+                        often
+                        with an inspirational, motivational, or humorous tone. Users can refresh or click a button
+                        to
+                        generate a new quote.</p>
+                    <button class="project-button">View Project</button>
+                </div>
+
+                <div class="pro"><img src="project-4.png" alt="Project name">
+                    <h2>Project Name</h2>
+                    <p> Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Nam amet nisi modi eum sunt facere nesciunt praesentium vel repudiandae officiis sit
+                        accusamus molestias.</p>
+                    <button class="project-button">View Project</button>
+                </div>
+
+                <div class="pro"><img src="project-5.png" alt="Project name">
+                    <h2>Project Name</h2>
+                    <p>Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Nam amet nisi modi eum sunt facere nesciunt praesentium vel repudiandae officiis sit
+                        accusamus molestias.</p>
+                    <button class="project-button">View Project</button>
                 </div>
             </div>
 
-        </section>
-
-        <section id="project">
-            <div class="Project">
-                <h1>Project</h1>
-
-                <div class="mini-project">
-                    <div class="pro"><img src="temperature.png" alt="Project name">
-                        <h2>Temperature converter</h2>
-                        <P>A temperature converter is a tool or application designed to convert
-                            temperature values between different units, such as Celsius (°C), Fahrenheit (°F). It
-                            simplifies
-                            calculations by allowing users to input .</p>
-                        <button class="project-button">View Project</button>
-                    </div>
-
-                    <div class="pro"><img src="counter.png" alt="Project name">
-                        <h2>Counter</h2>
-                        <p>A counter project is a simple application or tool designed to increment,
-                            decrement a numerical value. It typically includes buttons or controls for users to adjust
-                            the
-                            count and displays the updated value in real-time.</p>
-                        <button class="project-button">View Project</button>
-                    </div>
-
-                    <div class="pro"><img src="project-3.png" alt="Project name">
-                        <h2>Quotes generator</h2>
-                        <p>A quotes generator is a simple application or tool that displays random or curated quotes,
-                            often
-                            with an inspirational, motivational, or humorous tone. Users can refresh or click a button
-                            to
-                            generate a new quote.</p>
-                        <button class="project-button">View Project</button>
-                    </div>
-
-                    <div class="pro"><img src="project-4.png" alt="Project name">
-                        <h2>Project Name</h2>
-                        <p> Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
-                            adipisicing
-                            elit. Nam amet nisi modi eum sunt facere nesciunt praesentium vel repudiandae officiis sit
-                            accusamus molestias.</p>
-                        <button class="project-button">View Project</button>
-                    </div>
-
-                    <div class="pro"><img src="project-5.png" alt="Project name">
-                        <h2>Project Name</h2>
-                        <p>Brief description of the project goes here. Lorem ipsum dolor sit amet consectetur
-                            adipisicing
-                            elit. Nam amet nisi modi eum sunt facere nesciunt praesentium vel repudiandae officiis sit
-                            accusamus molestias.</p>
-                        <button class="project-button">View Project</button>
-                    </div>
-                </div>
-
-                <div id="button">
-                    <button class="move-button" id="move-left">
-                        < </button>
-                            <button class="move-button" id="move-right"> > </button>
-                </div>
-
+            <div id="button">
+                <button class="move-button" id="move-left">
+                    < </button>
+                        <button class="move-button" id="move-right"> > </button>
             </div>
 
+        </div>
 
 
-            <div class="head2">
-                <h1>Experience</h1>
-            </div>
 
-            <div class="Box-4">
-                <div class="company1">
-                    <div class="company">
-                        <img src="google.png" alt="google">
-                        <p> <button>Know More</button></p>
-                    </div>
+        <div class="head2">
+            <h1>Experience</h1>
+        </div>
 
-                    <div class="description1">
-                        <p>
-                        <h3>Company Name</h3>
-                        </p>
-                        <p>Month 20XX - Month 20XX</p>
-                        <span>Job description:-</span>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
+        <div class="Box-4">
+            <div class="company1">
+                <div class="company">
+                    <img src="google.png" alt="google">
+                    <p> <button>Know More</button></p>
                 </div>
 
-                <div class="company1">
-                    <div class="company">
-                        <img src="google.png" alt="google">
-                        <p> <button>Know More</button></p>
-                    </div>
-
-                    <div class="description1">
-                        <p>
-                        <h3>Company Name</h3>
-                        </p>
-                        <p>Month 20XX - Month 20XX</p>
-                        <span>Job description:-</span>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                </div>
-
-            </div>
-        </section>
-
-        <section id="Qualification">
-            <div class="head2">
-                <h1>Qualification</h1>
-            </div>
-
-
-            <div class="qualification-section">
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <h4>SSC</h4>
-                        <p>XYZ School, 20XX–20XX</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h4>HSC</h4>
-                        <p>XYZ College, 20XX–20XX</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h4>Bachelors</h4>
-                        <p>XYZ College, 20XX–20XX</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h4>Masters</h4>
-                        <p>XYZ College, 20XX–20XX</p>
-                    </div>
-                    <div class="timeline-item">
-                        <h4>Training Certificates</h4>
-                        <p>XYZ Institute, 20XX–20XX</p>
-                    </div>
-                </div>
-
-                <div class="image-section">
-                    <img src="tools/degree.png" alt="Graduation Image">
-                    <p class="achievements">
-                        Some Experiences or Achievements<br>
-                        JHBLKWUYLKCJULRYCURSWVYHOzdlfjhjuhuarnn;llvwurg <br>vksuskhurxdkjrhfvlgxluxddrffg
+                <div class="description1">
+                    <p>
+                    <h3>Company Name</h3>
                     </p>
+                    <p>Month 20XX - Month 20XX</p>
+                    <span>Job description:-</span>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
-        </section>
 
-        <section id="contact">
-
-            <footer class="footer">
-                <div class="footer-content">
-                    <div class="profile-picture">
-                        <img src="pic.png" alt="Profile Picture" />
-                    </div>
-                    <h2>Rushikesh Kakade</h2>
-                    <p class="contact-details">
-                        <a href="mailto:rushikeshkakade603@gmail.com">
-                            <i class="fa fa-envelope"></i> rushikeshkakade603@gmail.com
-                        </a>
-                        <a href="tel:7039967948">
-                            <i class="fa fa-phone"></i> 7039967948
-                        </a>
-                    </p>
-                    <button class="contact-button">Contact Me</button>
+            <div class="company1">
+                <div class="company">
+                    <img src="google.png" alt="google">
+                    <p> <button>Know More</button></p>
                 </div>
-            </footer>
-        </section>
+
+                <div class="description1">
+                    <p>
+                    <h3>Company Name</h3>
+                    </p>
+                    <p>Month 20XX - Month 20XX</p>
+                    <span>Job description:-</span>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="Qualification">
+        <div class="head2">
+            <h1>Qualification</h1>
+        </div>
+
+
+        <div class="qualification-section">
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h4>SSC</h4>
+                    <p>XYZ School, 20XX–20XX</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>HSC</h4>
+                    <p>XYZ College, 20XX–20XX</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Bachelors</h4>
+                    <p>XYZ College, 20XX–20XX</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Masters</h4>
+                    <p>XYZ College, 20XX–20XX</p>
+                </div>
+                <div class="timeline-item">
+                    <h4>Training Certificates</h4>
+                    <p>XYZ Institute, 20XX–20XX</p>
+                </div>
+            </div>
+
+            <div class="image-section">
+                <img src="degree copy.png" alt="Graduation Image">
+                <p class="achievements">
+                    Some Experiences or Achievements<br>
+                    JHBLKWUYLKCJULRYCURSWVYHOzdlfjhjuhuarnn;llvwurg <br>vksuskhurxdkjrhfvlgxluxddrffg
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact">
+
+        <footer class="footer">
+            <div class="footer-content">
+                <div class="profile-picture">
+                    <img src="pic.png" alt="Profile Picture" />
+                </div>
+                <h2>Rushikesh Kakade</h2>
+                <p class="contact-details">
+                    <a href="mailto:rushikeshkakade603@gmail.com">
+                        <i class="fa fa-envelope"></i> rushikeshkakade603@gmail.com
+                    </a>
+                    <a href="tel:7039967948">
+                        <i class="fa fa-phone"></i> 7039967948
+                    </a>
+                </p>
+                <button class="contact-button">Contact Me</button>
+            </div>
+        </footer>
+    </section>
     </div>
 
 
