--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 
         <section id="skill">
-            <div class="Tools"></div>
+            <div class="Tools">
             <h1>Tech Skills</h1>
             <div class="app">
                 <div><img src="vscode.png" alt="VSCODE">VSCODE</div>
