--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </div>
 
                 <div>
-                    <video width="100%" height="500px" class="videoImage" autoplay loop>
-                        <source src="video2.mp4" type="video/mp4">
+                    <video width="100%" height="500px" class="videoImage" autoplay muted loop>
+                        <source src="/video2.mp4" type="video/mp4">
                     </video>
                 </div>
 
