--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             </div>
 
-            <div class="Box-1">
+            <div class="level">
                 <h3>I'm Suitable For</h3>
                 <hr class="line" />
                 <div class="stage">
@@ -103,7 +103,7 @@
                 <h2>Expertise</h2>
             </div>
 
-            <div class="Box-2">
+            <div class="developer-section">
                 <img src="ss.png" alt="ss" class="size">
 
                 <div class="description">
@@ -143,7 +143,7 @@
 
     </div>
 
-    <div class="Box-3">
+    <div class="skill-section">
         <h1>Soft Skills</h1>
 
         <div class="skill-list">
@@ -230,8 +230,8 @@
             <h1>Experience</h1>
         </div>
 
-        <div class="Box-4">
-            <div class="company1">
+        <div class="experience-section">
+            <div class="google">
                 <div class="company">
                     <img src="google.png" alt="google">
                     <p> <button>Know More</button></p>
@@ -247,7 +247,7 @@
                 </div>
             </div>
 
-            <div class="company1">
+            <div class="google">
                 <div class="company">
                     <img src="google.png" alt="google">
                     <p> <button>Know More</button></p>
